XP-866 Image Editing - Change styling of the toolbar * Fixed things lost during the merge * Fixed position of the toolbar for a cropped image

--- a/modules/admin-ui/src/main/resources/web/admin/common/styles/api/ui/image/image-editor.less
+++ b/modules/admin-ui/src/main/resources/web/admin/common/styles/api/ui/image/image-editor.less
@@ -56,14 +56,14 @@
   }
 
   &.edit-mode.selected {
-    .image-frame .image-canvas .buttons-container {
+    .image-frame .buttons-container {
       display: none;
     }
   }
 
   &.selected {
-    .image-frame .image-canvas .buttons-container {
-      display: block;
+    .image-frame .buttons-container {
+      z-index: 10;
       text-align: center;
       position: absolute;
       top: 40%;
@@ -114,13 +114,13 @@
     position: relative;
     box-shadow: none;
 
+    .buttons-container {
+      display: none;
+    }
+
     .image-canvas {
       position: absolute;
       border: 1px solid @admin-white;
-
-      .buttons-container {
-        display: none;
-      }
 
       .image-bg {
         vertical-align: top; // to remove padding below the image
@@ -215,26 +215,7 @@
     position: relative;
     z-index: @z-index-mask + 1;
     .clearfix();
-/*
-    .buttons-container {
 
-      button {
-        font-size: 32px;
-        padding: 0;
-        .button-foreground(@admin-font-gray2);
-
-        &.manual {
-          .button-foreground(@admin-blue);
-        }
-
-        span {
-          display: none;
-        }
-
-      }
-
-    }
-*/
     .edit-container {
       text-align: center;
 
